@@ -7,6 +7,7 @@ import com.querydsl.core.types.*;
 import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.core.types.dsl.Expressions;
 import com.querydsl.jpa.JPAExpressions;
+import com.querydsl.jpa.JPQLQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,10 +22,11 @@ import store.aurora.book.entity.Book;
 import store.aurora.book.entity.category.Category;
 import store.aurora.book.entity.QBook;
 import store.aurora.book.repository.BookRepositoryCustom;
-import store.aurora.order.entity.QOrder;
-import store.aurora.order.entity.QOrderDetail;
+
 import store.aurora.order.entity.enums.OrderState;
+import store.aurora.search.SortConstants;
 import store.aurora.search.dto.BookSearchEntityDTO;
+import store.aurora.search.service.StringConstants;
 
 import static store.aurora.book.entity.QBook.book;
 import static store.aurora.book.entity.QBookAuthor.bookAuthor;
@@ -46,11 +48,9 @@ import static store.aurora.order.entity.QOrder.order;
 
 
 
-import static store.aurora.utils.ValidationUtils.*;
 
 import java.time.LocalDate;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.Objects;
 
 
@@ -70,7 +70,7 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
     public Page<BookSearchEntityDTO> findBooksByTitleWithDetails(String title, Pageable pageable) {
         // title이 null이거나 공백인 경우 빈 페이지 반환
         if (Objects.isNull(title)) {
-            return emptyPage(pageable);
+            return Page.empty(pageable);  // Pageable 정보와 함께 빈 페이지 반환
         }
 
         // 필터링 조건 정의
@@ -78,51 +78,40 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 ? null // 조건 없음
                 : book.title.like("%" + title + "%"); // 제목 필터링 조건
 
-        // 이미지를 하나만 가져오는 쿼리
-        var bookImagePathSubquery = getBookImagePathSubquery();
-
-        // 조회수를 가져오는 서브쿼리
-        var viewCountSubquery = getViewCountSubquery();
-
-        // 리뷰 개수 가져오는 쿼리
-        var reviewCountSubquery = JPAExpressions.select(review.count().intValue()) // int로 변환
-                .from(review)
-                .where(review.book.id.eq(book.id));
-
-        // 평균 리뷰 점수 가져오는 서브쿼리
-        var averageReviewRatingSubquery = getAverageReviewRatingSubquery();
 
         // 정렬 기준 추출
         Sort.Order sortOrder = pageable.getSort().stream().findFirst().orElse(Sort.Order.asc("id")); // 기본 정렬 기준
         Expression<?> orderByExpression = switch (sortOrder.getProperty().toLowerCase()) {
-            case "saleprice" -> book.salePrice;
-            case "publishdate" -> book.publishDate;
-            case "title" -> book.title;
-            case "reviewrating" -> averageReviewRatingSubquery; // reviewRating에 대한 정렬 처리
-            case "like" -> getLikeCountSubquery();
-            case "view" -> getViewCountSubquery();
+            case SortConstants.SALE_PRICE -> book.salePrice;
+            case SortConstants.PUBLISH_DATE -> book.publishDate;
+            case SortConstants.TITLE -> book.title;
+            case SortConstants.REVIEW_RATING -> getAverageReviewRatingSubquery(); // reviewRating에 대한 정렬 처리
+            case SortConstants.LIKE -> getLikeCountSubquery();
+            case SortConstants.VIEW -> getViewCountSubquery();
             default -> book.id; // 기본값
         };
 
         // `reviewRating` 기준으로 정렬 시, 리뷰가 100개 이상인 책만 필터링하는 조건 추가
-        BooleanExpression reviewCountCondition = (sortOrder.getProperty().equalsIgnoreCase("reviewrating"))
-                ? reviewCountSubquery.goe(100) // 리뷰 개수가 100개 이상인 경우에만
+        BooleanExpression reviewCountCondition = (sortOrder.getProperty().equalsIgnoreCase(SortConstants.REVIEW_RATING))
+                ? getReviewCountSubquery().goe(100) // 리뷰 개수가 100개 이상인 경우에만
                 : null;
 
         // 제네릭 타입 명시적 설정
         @SuppressWarnings("unchecked")
-        OrderSpecifier<?> orderSpecifier = sortOrder.getDirection().isDescending()
-                ? new OrderSpecifier<>(Order.DESC, (Expression<Comparable>) orderByExpression)
-                : new OrderSpecifier<>(Order.ASC, (Expression<Comparable>) orderByExpression);
+        OrderSpecifier<Long> orderSpecifier = sortOrder.getDirection().isDescending()
+                ? new OrderSpecifier<>(Order.DESC, (Expression<Long>) orderByExpression)
+                : new OrderSpecifier<>(Order.ASC, (Expression<Long>) orderByExpression);
 
-        // bookDetail 가져오기
-        List<BookSearchEntityDTO> content = from(book)
+        // 데이터 조회
+        List<Tuple> results = from(book)
                 .leftJoin(book.publisher, publisher)
-                .where(titleCondition) // 제목 필터링 조건 추가
-                .where(reviewCountCondition) // reviewCountCondition을 where 절에 추가
+                .where(titleCondition)
+                .where(reviewCountCondition)
+                .orderBy(orderSpecifier)
                 .groupBy(book.id, book.title, book.regularPrice, book.salePrice, book.publishDate, publisher.name)
-                .select(Projections.constructor(
-                        BookSearchEntityDTO.class,
+                .offset(pageable.getOffset())
+                .limit(pageable.getPageSize())
+                .select(
                         book.id,
                         book.title,
                         book.regularPrice,
@@ -130,34 +119,31 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                         book.isSale,
                         book.publishDate,
                         publisher.name,
-                        // 여러 저자와 역할을 쉼표로 묶어서 반환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0} || ' (' || {1} || ')')",
+                                        StringConstants.GROUP_CONCAT_AUTHOR_ROLE,
                                         author.name, authorRole.role
                                 ))
                                 .from(bookAuthor)
                                 .leftJoin(bookAuthor.author, author)
                                 .leftJoin(bookAuthor.authorRole, authorRole)
                                 .where(bookAuthor.book.id.eq(book.id)),
-                        bookImagePathSubquery,
-                        // 카테고리 아이디를 List로 변환
+                        getBookImagePathSubquery(),
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0})",
+                                        StringConstants.GROUP_CONCAT_CATEGORY_ID,
                                         category.id
                                 ))
                                 .from(bookCategory)
                                 .leftJoin(bookCategory.category, category)
                                 .where(bookCategory.book.id.eq(book.id)),
-                        viewCountSubquery,
-                        reviewCountSubquery, // 리뷰 갯수 추가
-                        averageReviewRatingSubquery // 평균 리뷰 점수 추가
-                ))
-                .orderBy(orderSpecifier) // 정렬 기준 추가
-                .offset(pageable.getOffset()) // 시작 위치 설정
-                .limit(pageable.getPageSize()) // 가져올 데이터 수 설정
+                        getViewCountSubquery(),
+                        getReviewCountSubquery(),
+                        getAverageReviewRatingSubquery()
+                )
                 .fetch();
 
-        log.debug("customImpl 메서드 값 확인 {}", content.toString());
+        List<BookSearchEntityDTO> content = results.stream()
+                .map(this::convertToDTO) // 메서드 호출
+                .toList();
 
         // Count query for pagination
         long total = from(book)
@@ -174,50 +160,43 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
     @Override
     public Page<BookSearchEntityDTO> findBooksByAuthorNameWithDetails(String name, Pageable pageable) {
         if (Objects.isNull(name) || name.isBlank()) {
-            return emptyPage(pageable);
+            return Page.empty(pageable);
         }
-
-        // 서브쿼리: 첫 번째 이미지 경로 가져오기
-        var bookImagePathSubquery = getBookImagePathSubquery();
-
-
-        // 조회수를 가져오는 서브쿼리
-        var viewCountSubquery = getViewCountSubquery();
 
         // 리뷰 개수
         var reviewCountSubquery = JPAExpressions.select(review.count().intValue()) // int로 변환
                 .from(review)
                 .where(review.book.id.eq(book.id));
 
-        // 평균 리뷰 점수 가져오는 서브쿼리
-        var averageReviewRatingSubquery = getAverageReviewRatingSubquery();
-
         // 정렬 조건 설정
         Sort.Order sortOrder = pageable.getSort().stream().findFirst().orElse(Sort.Order.asc("title")); // 기본 정렬 기준
         Expression<?> orderByExpression = switch (sortOrder.getProperty().toLowerCase()) {
-            case "saleprice" -> book.salePrice;
-            case "publishdate" -> book.publishDate;
-            case "title" -> book.title;
-            case "reviewrating" -> averageReviewRatingSubquery; // 리뷰 평점으로 정렬
+            case SortConstants.SALE_PRICE -> book.salePrice;
+            case SortConstants.PUBLISH_DATE -> book.publishDate;
+            case SortConstants.TITLE -> book.title;
+            case SortConstants.REVIEW_RATING -> getAverageReviewRatingSubquery(); // reviewRating에 대한 정렬 처리
+            case SortConstants.LIKE -> getLikeCountSubquery();
+            case SortConstants.VIEW -> getViewCountSubquery();
             default -> book.title; // 기본값
         };
 
         // 제네릭 타입 명시적 설정
         @SuppressWarnings("unchecked")
-        OrderSpecifier<?> orderSpecifier = sortOrder.getDirection().isDescending()
-                ? new OrderSpecifier<>(Order.DESC, (Expression<Comparable>) orderByExpression)
-                : new OrderSpecifier<>(Order.ASC, (Expression<Comparable>) orderByExpression);
+        OrderSpecifier<Long> orderSpecifier = sortOrder.getDirection().isDescending()
+                ? new OrderSpecifier<>(Order.DESC, (Expression<Long>) orderByExpression)
+                : new OrderSpecifier<>(Order.ASC, (Expression<Long>) orderByExpression);
+
 
         // 메인 쿼리: 저자 이름 검색 및 도서 정보 조회
         BooleanBuilder whereBuilder = new BooleanBuilder();
         whereBuilder.and(Expressions.stringTemplate("LOWER({0})", author.name).like("%" + name.toLowerCase() + "%")); // 대소문자 구분 없이 저자 이름 조건
 
         // reviewrating으로 정렬할 때, 리뷰 개수가 100개 이상인 책만 가져오기
-        if ("reviewrating".equalsIgnoreCase(sortOrder.getProperty())) {
+        if (SortConstants.REVIEW_RATING.equalsIgnoreCase(sortOrder.getProperty())) {
             whereBuilder.and(reviewCountSubquery.goe(100)); // 리뷰 개수가 100개 이상인 책만 가져오기
         }
 
-        List<BookSearchEntityDTO> content = from(book)
+        List<Tuple> results = from(book)
                 .leftJoin(book.publisher, publisher)
                 .leftJoin(bookAuthor).on(bookAuthor.book.id.eq(book.id))
                 .leftJoin(bookAuthor.author, author)
@@ -227,8 +206,7 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 .orderBy(orderSpecifier) // 동적 정렬 조건 추가
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .select(Projections.constructor(
-                        BookSearchEntityDTO.class,
+                .select(
                         book.id,
                         book.title,
                         book.regularPrice,
@@ -238,27 +216,31 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                         publisher.name,
                         // 여러 저자와 역할을 쉼표로 묶어서 반환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0} || ' (' || {1} || ')')",
+                                        StringConstants.GROUP_CONCAT_AUTHOR_ROLE,
                                         author.name, authorRole.role
                                 ))
                                 .from(bookAuthor)
                                 .leftJoin(bookAuthor.author, author)
                                 .leftJoin(bookAuthor.authorRole, authorRole)
                                 .where(bookAuthor.book.id.eq(book.id)),
-                        bookImagePathSubquery,
+                        getBookImagePathSubquery(),
                         // 카테고리 아이디를 List로 변환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0})",
+                                        StringConstants.GROUP_CONCAT_CATEGORY_ID,
                                         category.id
                                 ))
                                 .from(bookCategory)
                                 .leftJoin(bookCategory.category, category)
                                 .where(bookCategory.book.id.eq(book.id)),
-                        viewCountSubquery, // 조회수 추가
+                        getViewCountSubquery(), // 조회수 추가
                         reviewCountSubquery, // 리뷰 갯수 추가
-                        averageReviewRatingSubquery // 평균 리뷰 점수 추가
-                ))
+                        getAverageReviewRatingSubquery() // 평균 리뷰 점수 추가
+                )
                 .fetch();
+
+        List<BookSearchEntityDTO> content = results.stream()
+                .map(this::convertToDTO) // `convertToDTO` 메서드를 사용하여 변환
+                .toList();
 
         // 총 데이터 수 계산
         long total = from(book)
@@ -266,8 +248,6 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 .leftJoin(bookAuthor.author, author)
                 .where(whereBuilder) // 동적으로 where 조건 추가
                 .fetchCount();
-
-        log.debug("BookRepositoryCustomImpl 확인:");
 
         // 페이지 처리된 결과 반환
         return new PageImpl<>(content, pageable, total);
@@ -280,66 +260,76 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
     @Override
     public Page<BookSearchEntityDTO> findBooksByCategoryWithDetails(Long categoryId, Pageable pageable) {
         if (categoryId == null) {
-            return emptyPage(pageable);
+            return Page.empty(pageable);
         }
-
-        // 최하위 카테고리인지 확인하기 위한 서브쿼리
-        var isLeafCategorySubquery = JPAExpressions.select(category.parent.id)
-                .from(category)
-                .where(category.id.eq(categoryId));
 
         // 최하위 카테고리일 경우 해당 카테고리만 가져오고, 그렇지 않으면 해당 카테고리와 하위 카테고리들을 모두 가져오기
         var categoryHierarchySubquery = JPAExpressions.select(category.id)
                 .from(category)
                 .where(
-                        category.id.eq(categoryId)
-                                .or(category.parent.id.eq(categoryId))
-                                .or(category.id.eq(categoryId).and(category.parent.id.isNull()))
+                        category.id.eq(categoryId) // 현재 카테고리
+                                .or(category.parent.id.eq(categoryId)) // 첫 번째 단계 (상위 카테고리의 하위 카테고리)
+                                .or(category.id.in(
+                                        JPAExpressions.select(category.id)
+                                                .from(category)
+                                                .where(category.parent.id.in(
+                                                        JPAExpressions.select(category.id)
+                                                                .from(category)
+                                                                .where(category.parent.id.eq(categoryId)) // 두 번째 단계
+                                                ))
+                                ))
+                                .or(category.id.in(
+                                        JPAExpressions.select(category.id)
+                                                .from(category)
+                                                .where(category.parent.id.in(
+                                                        JPAExpressions.select(category.id)
+                                                                .from(category)
+                                                                .where(category.parent.id.in(
+                                                                        JPAExpressions.select(category.id)
+                                                                                .from(category)
+                                                                                .where(category.parent.id.eq(categoryId)) // 세 번째 단계
+                                                                ))
+                                                ))
+                                ))
                 )
                 .distinct();
+
 
         // 리뷰 개수
         var reviewCountSubquery = JPAExpressions.select(review.count().intValue())
                 .from(review)
                 .where(review.book.id.eq(book.id));
 
-        // 평균 리뷰 점수 가져오는 서브쿼리
-        var averageReviewRatingSubquery = getAverageReviewRatingSubquery();
-
-        // 서브쿼리: 첫 번째 이미지 경로 가져오기
-        var bookImagePathSubquery = getBookImagePathSubquery();
-
-
-        // 조회수를 가져오는 서브쿼리
-        var viewCountSubquery = getViewCountSubquery();
-
         // 정렬 조건 설정
-        Sort.Order sortOrder = pageable.getSort().stream().findFirst().orElse(Sort.Order.asc("title")); // 기본 정렬 기준
+        Sort.Order sortOrder = pageable.getSort().stream().findFirst().orElse(Sort.Order.asc(SortConstants.TITLE)); // 기본 정렬 기준
         Expression<?> orderByExpression = switch (sortOrder.getProperty().toLowerCase()) {
-            case "saleprice" -> book.salePrice;
-            case "publishdate" -> book.publishDate;
-            case "title" -> book.title;
-            case "reviewrating" -> averageReviewRatingSubquery;
+            case SortConstants.SALE_PRICE -> book.salePrice;
+            case SortConstants.PUBLISH_DATE -> book.publishDate;
+            case SortConstants.TITLE -> book.title;
+            case SortConstants.REVIEW_RATING -> getAverageReviewRatingSubquery(); // reviewRating에 대한 정렬 처리
+            case SortConstants.LIKE -> getLikeCountSubquery();
+            case SortConstants.VIEW -> getViewCountSubquery();
             default -> book.title; // 기본값
         };
 
         // 제네릭 타입 명시적 설정
         @SuppressWarnings("unchecked")
-        OrderSpecifier<?> orderSpecifier = sortOrder.getDirection().isDescending()
-                ? new OrderSpecifier<>(Order.DESC, (Expression<Comparable>) orderByExpression)
-                : new OrderSpecifier<>(Order.ASC, (Expression<Comparable>) orderByExpression);
+        OrderSpecifier<Long> orderSpecifier = sortOrder.getDirection().isDescending()
+                ? new OrderSpecifier<>(Order.DESC, (Expression<Long>) orderByExpression)
+                : new OrderSpecifier<>(Order.ASC, (Expression<Long>) orderByExpression);
+
 
         // 메인 쿼리: 카테고리와 자식 카테고리들을 포함하여 책들을 검색
         BooleanBuilder whereBuilder = new BooleanBuilder();
         whereBuilder.and(bookCategory.category.id.in(categoryHierarchySubquery)); // 카테고리 조건
 
         // 리뷰가 100개 이상인 책만 가져오기
-        if ("reviewrating".equalsIgnoreCase(sortOrder.getProperty())) {
+        if (SortConstants.REVIEW_RATING.equalsIgnoreCase(sortOrder.getProperty())) {
             whereBuilder.and(reviewCountSubquery.goe(100));
         }
 
         // 메인 쿼리: 책 검색
-        List<BookSearchEntityDTO> content = from(book)
+        List<Tuple> results = from(book)
                 .leftJoin(book.publisher, publisher)
                 .leftJoin(bookCategory).on(bookCategory.book.id.eq(book.id))
                 .leftJoin(bookCategory.category, category)
@@ -348,8 +338,7 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 .orderBy(orderSpecifier) // 정렬 조건 추가
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .select(Projections.constructor(
-                        BookSearchEntityDTO.class,
+                .select(
                         book.id,
                         book.title,
                         book.regularPrice,
@@ -357,30 +346,34 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                         book.isSale,
                         book.publishDate,
                         publisher.name,
-
                         // 여러 저자와 역할을 쉼표로 묶어서 반환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0} || ' (' || {1} || ')')",
+                                        StringConstants.GROUP_CONCAT_AUTHOR_ROLE,
                                         author.name, authorRole.role
                                 ))
                                 .from(bookAuthor)
                                 .leftJoin(bookAuthor.author, author)
                                 .leftJoin(bookAuthor.authorRole, authorRole)
                                 .where(bookAuthor.book.id.eq(book.id)),
-                        bookImagePathSubquery,
+                        getBookImagePathSubquery(),
                         // 카테고리 아이디를 List로 변환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0})",
+                                        StringConstants.GROUP_CONCAT_CATEGORY_ID,
                                         category.id
                                 ))
                                 .from(bookCategory)
                                 .leftJoin(bookCategory.category, category)
                                 .where(bookCategory.book.id.eq(book.id)),
-                        viewCountSubquery, // 조회수 추가
+                        getViewCountSubquery(), // 조회수 추가
                         reviewCountSubquery, // 리뷰 갯수 추가
-                        averageReviewRatingSubquery // 평균 리뷰 점수 추가
-                ))
+                        getAverageReviewRatingSubquery() // 평균 리뷰 점수 추가
+                )
                 .fetch();
+
+        List<BookSearchEntityDTO> content = results.stream()
+                .map(this::convertToDTO) // `convertToDTO` 메서드를 사용하여 변환
+                .toList();
+
 
         // 총 데이터 수 계산
         long total = from(book)
@@ -419,10 +412,14 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
 
 
         // 좋아요 개수 조회
-        int likeCount = (int) queryFactory
-                .from(like)
-                .where(like.book.id.eq(bookId))
-                .fetchCount();
+        int likeCount = Optional.ofNullable(queryFactory
+                        .select(like.count())
+                        .from(like)
+                        .where(like.book.id.eq(bookId))
+                        .fetchOne())
+                .map(Long::intValue)
+                .orElse(0);
+
 
         List<BookCategoryDto> categoryPathByBookId = findCategoryPathByBookId(bookId);
 
@@ -455,7 +452,7 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 .fetch()
                 .stream()
                 .map(BookImageDto::new)  // String을 BookImageDto로 변환
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -549,49 +546,39 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
     @Override
     public Page<BookSearchEntityDTO> findBookByIdIn(List<Long> bookId, Pageable pageable) {
 
-        // 이미지를 하나만 가져오는 쿼리
-        var bookImagePathSubquery = getBookImagePathSubquery();
-
-        // 조회수를 가져오는 서브쿼리
-        var viewCountSubquery = getViewCountSubquery();
-
-        // 리뷰 개수 가져오는 쿼리
-        var reviewCountSubquery = JPAExpressions.select(review.count().intValue()) // int로 변환
-                .from(review)
-                .where(review.book.id.eq(book.id));
-
-        // 평균 리뷰 점수 가져오는 서브쿼리
-        var averageReviewRatingSubquery = getAverageReviewRatingSubquery();
-
         // 정렬 기준 추출
         Sort.Order sortOrder = pageable.getSort().stream().findFirst().orElse(Sort.Order.asc("id")); // 기본 정렬 기준
         Expression<?> orderByExpression = switch (sortOrder.getProperty().toLowerCase()) {
-            case "saleprice" -> book.salePrice;
-            case "publishdate" -> book.publishDate;
-            case "title" -> book.title;
-            case "reviewrating" -> averageReviewRatingSubquery; // reviewRating에 대한 정렬 처리
+            case SortConstants.SALE_PRICE -> book.salePrice;
+            case SortConstants.PUBLISH_DATE -> book.publishDate;
+            case SortConstants.TITLE -> book.title;
+            case SortConstants.REVIEW_RATING -> getAverageReviewRatingSubquery(); // reviewRating에 대한 정렬 처리
+            case SortConstants.LIKE -> getLikeCountSubquery();
+            case SortConstants.VIEW -> getViewCountSubquery();
             default -> book.id; // 기본값
         };
 
         // `reviewRating` 기준으로 정렬 시, 리뷰가 100개 이상인 책만 필터링하는 조건 추가
-        BooleanExpression reviewCountCondition = (sortOrder.getProperty().equalsIgnoreCase("reviewrating"))
-                ? reviewCountSubquery.goe(100) // 리뷰 개수가 100개 이상인 경우에만
+        BooleanExpression reviewCountCondition = (sortOrder.getProperty().equalsIgnoreCase(SortConstants.REVIEW_RATING))
+                ?  getReviewCountSubquery().goe(100) // 리뷰 개수가 100개 이상인 경우에만
                 : null;
 
         // 제네릭 타입 명시적 설정
         @SuppressWarnings("unchecked")
-        OrderSpecifier<?> orderSpecifier = sortOrder.getDirection().isDescending()
-                ? new OrderSpecifier<>(Order.DESC, (Expression<Comparable>) orderByExpression)
-                : new OrderSpecifier<>(Order.ASC, (Expression<Comparable>) orderByExpression);
+        OrderSpecifier<Long> orderSpecifier = sortOrder.getDirection().isDescending()
+                ? new OrderSpecifier<>(Order.DESC, (Expression<Long>) orderByExpression)
+                : new OrderSpecifier<>(Order.ASC, (Expression<Long>) orderByExpression);
+
 
         // bookDetail 가져오기
-        List<BookSearchEntityDTO> content = from(book)
+        List<Tuple> results = from(book)
                 .leftJoin(book.publisher, publisher)
                 .where(book.id.in(bookId)) // bookId에 포함된 책만 조회
                 .where(reviewCountCondition) // reviewCountCondition을 where 절에 추가
                 .groupBy(book.id, book.title, book.regularPrice, book.salePrice, book.publishDate, publisher.name)
-                .select(Projections.constructor(
-                        BookSearchEntityDTO.class,
+                .offset(pageable.getOffset())
+                .limit(pageable.getPageSize())
+                .select(
                         book.id,
                         book.title,
                         book.regularPrice,
@@ -601,30 +588,31 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                         publisher.name,
                         // 여러 저자와 역할을 쉼표로 묶어서 반환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0} || ' (' || {1} || ')')",
+                                        StringConstants.GROUP_CONCAT_AUTHOR_ROLE,
                                         author.name, authorRole.role
                                 ))
                                 .from(bookAuthor)
                                 .leftJoin(bookAuthor.author, author)
                                 .leftJoin(bookAuthor.authorRole, authorRole)
                                 .where(bookAuthor.book.id.eq(book.id)),
-                        bookImagePathSubquery,
+                        getBookImagePathSubquery(),
                         // 카테고리 아이디를 List로 변환
                         JPAExpressions.select(Expressions.stringTemplate(
-                                        "GROUP_CONCAT({0})",
+                                        StringConstants.GROUP_CONCAT_CATEGORY_ID,
                                         category.id
                                 ))
                                 .from(bookCategory)
                                 .leftJoin(bookCategory.category, category)
                                 .where(bookCategory.book.id.eq(book.id)),
-                        viewCountSubquery,
-                        reviewCountSubquery, // 리뷰 갯수 추가
-                        averageReviewRatingSubquery // 평균 리뷰 점수 추가
-                ))
+                        getViewCountSubquery(),
+                        getReviewCountSubquery(), // 리뷰 갯수 추가
+                        getAverageReviewRatingSubquery() // 평균 리뷰 점수 추가
+                )
                 .orderBy(orderSpecifier) // 정렬 기준 추가
                 .fetch();
-
-        log.debug("customImpl 메서드 값 확인 {}", content.toString());
+        List<BookSearchEntityDTO> content = results.stream()
+                .map(this::convertToDTO) // `convertToDTO` 메서드를 사용하여 변환
+                .toList();
 
         // Count query for pagination
         long total = from(book)
@@ -632,6 +620,13 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 .fetchCount();
 
         return new PageImpl<>(content, pageable, total);
+    }
+
+    //리뷰 개수 가져오는 서브쿼리
+    private JPQLQuery<Integer> getReviewCountSubquery() {
+        return JPAExpressions.select(review.count().intValue())
+                .from(review)
+                .where(review.book.id.eq(book.id));
     }
 
     // 이미지를 하나만 가져오는 서브쿼리
@@ -680,6 +675,24 @@ public class BookRepositoryCustomImpl extends QuerydslRepositorySupport implemen
                 .groupBy(orderDetail.book.id)
                 .orderBy(orderDetail.quantity.sum().desc())
                 .fetchFirst(); // 첫 번째 결과만 가져옴
+    }
+
+    private BookSearchEntityDTO convertToDTO(Tuple tuple) {
+        return new BookSearchEntityDTO.Builder()
+                .id(tuple.get(book.id))
+                .title(tuple.get(book.title))
+                .regularPrice(Optional.ofNullable(tuple.get(book.regularPrice)).orElse(0)) // 기본값 0
+                .salePrice(Optional.ofNullable(tuple.get(book.salePrice)).orElse(0)) // 기본값 0
+                .isSale(Optional.ofNullable(tuple.get(book.isSale)).orElse(false)) // 기본값 false
+                .publishDate(tuple.get(book.publishDate))
+                .publisherName(Optional.ofNullable(tuple.get(publisher.name)).orElse("Unknown"))
+                .authors(Optional.ofNullable(tuple.get(7, String.class)).orElse("")) // 저자 정보 기본값
+                .bookImagePath(Optional.ofNullable(tuple.get(8, String.class)).orElse(""))
+                .categories(Optional.ofNullable(tuple.get(9, String.class)).orElse(""))
+                .viewCount(Optional.ofNullable(tuple.get(10, Long.class)).orElse(0L)) // Long으로 명시적으로 지정
+                .reviewCount(Optional.ofNullable(tuple.get(11, Integer.class)).orElse(0)) // Integer로 명시적으로 지정
+                .averageReviewRating(Optional.ofNullable(tuple.get(12, Double.class)).orElse(0.0)) // 기본값 0.0
+                .build();
     }
 
 
